Fix button icon text gap

--- a/components/button/src/index.scss
+++ b/components/button/src/index.scss
@@ -16,13 +16,13 @@
 
   &--icon-before {
     .utrecht-icon {
-      margin-right: 4px;
+      margin-inline-end: var(--rvo-space-sm);
     }
   }
 
   &--icon-after {
     .utrecht-icon {
-      margin-left: 4px;
+      margin-inline-start: var(--rvo-space-sm);
     }
   }
 }
